--- a/Diagramme_gantt_KNS_v1.html
+++ b/Diagramme_gantt_KNS_v1.html
@@ -352,7 +352,7 @@ th.gantt-day-header {
     <table class="proj-header">
       <tr>
         <td class="header">Société :</td>
-        <td>KouldNotKonect</td>
+        <td>KouldNotKonnect</td>
       </tr>
       <tr>
         <td class="header">Début :</td>
