--- a/Diagramme_gantt_KNS_v1.html
+++ b/Diagramme_gantt_KNS_v1.html
@@ -888,7 +888,7 @@ th.gantt-day-header {
                 <div class="gantt-empty-begin" style="width: 1786px;"></div>
                 <div class="gantt-complete-notdone" style="width: 230px;"></div>
                 <div class="gantt-empty-end"></div>
-                <div class="gantt-resources">B.K[50], L.K[50]</div>
+                <div class="gantt-resources">B.K[33], L.K[33], R.N[33]</div>
               </div>
             </td>
           </tr>
@@ -1370,7 +1370,7 @@ th.gantt-day-header {
             <td>
               <span></span>
             </td>
-            <td>B.K[50], L.K[50]</td>
+            <td>B.K[33], L.K[33], R.N[33]</td>
           </tr>
         </table>
       </div>
